fix(Alerts): Use correct CSS variable for z-index property
BREAKING CHANGE: Rename `--zindex-alert` CSS variable to `--zIndex-alert`

--- a/stylus/settings/z-index.styl
+++ b/stylus/settings/z-index.styl
@@ -67,6 +67,5 @@ html
     --zIndex-modal $modal-index
     --zIndex-modal-footer $modal-footer-index
     --zIndex-modal-toolbar $modal-toolbar-index
-    --zindex-alert $alert-index
+    --zIndex-alert $alert-index
 // @stylint on
-
